// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> componentDidMount 1`] = `
<div
  className="App good"
>
  <div
    className="Header"
  >
    <h1>
      red-rhinoceros
    </h1>
    <h2>
      2.0.0-alpha.4
    </h2>
  </div>
  <div
    className="buttons-container"
  >
    <button
      onClick={[Function]}
      type="button"
      value="San Francisco"
    >
      San Francisco
    </button>
    <button
      onClick={[Function]}
      type="button"
      value="London"
    >
      London
    </button>
    <button
      onClick={[Function]}
      type="button"
      value="Torino"
    >
      Torino
    </button>
    <button
      onClick={[Function]}
      type="button"
      value="Tokyo"
    >
      Tokyo
    </button>
  </div>
  <div
    className="OpenWeatherMap"
  >
    <div
      className="main-heading"
    >
      London
      , 
      GB
    </div>
    <div
      className="day"
    >
      Monday 6:50 AM
    </div>
    <div
      className="description"
    >
      shower rain
    </div>
    <div
      className="icon"
    >
      <img
        alt="shower rain"
        src="http://openweathermap.org/img/w/09d.png"
      />
    </div>
    <div
      className="temperature"
    >
      23.33
       °C
    </div>
  </div>
  <ul
    className="morale-check"
  >
    <li
      className="awesome"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        😎
      </span>
      <span
        className="description"
      >
        I'm feeling awesome
      </span>
    </li>
    <li
      className="good"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        👍
      </span>
      <span
        className="description"
      >
        I'm feeling good
      </span>
    </li>
    <li
      className="not-great"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        😕
      </span>
      <span
        className="description"
      >
        I'm not feeling great
      </span>
    </li>
    <li
      className="unhappy"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        😩
      </span>
      <span
        className="description"
      >
        I'm feeling unhappy
      </span>
    </li>
  </ul>
</div>
`;

exports[`<App /> constructor 1`] = `
<div
  className="App good"
>
  <div
    className="Header"
  >
    <h1>
      
    </h1>
    <h2>
      
    </h2>
  </div>
  <div
    className="buttons-container"
  >
    <button
      onClick={[Function]}
      type="button"
      value="San Francisco"
    >
      San Francisco
    </button>
    <button
      onClick={[Function]}
      type="button"
      value="London"
    >
      London
    </button>
    <button
      onClick={[Function]}
      type="button"
      value="Torino"
    >
      Torino
    </button>
    <button
      onClick={[Function]}
      type="button"
      value="Tokyo"
    >
      Tokyo
    </button>
  </div>
  <div
    className="OpenWeatherMap"
  />
  <ul
    className="morale-check"
  >
    <li
      className="awesome"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        😎
      </span>
      <span
        className="description"
      >
        I'm feeling awesome
      </span>
    </li>
    <li
      className="good"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        👍
      </span>
      <span
        className="description"
      >
        I'm feeling good
      </span>
    </li>
    <li
      className="not-great"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        😕
      </span>
      <span
        className="description"
      >
        I'm not feeling great
      </span>
    </li>
    <li
      className="unhappy"
      onClick={[Function]}
    >
      <span
        className="emoji"
      >
        😩
      </span>
      <span
        className="description"
      >
        I'm feeling unhappy
      </span>
    </li>
  </ul>
</div>
`;
